Restore keybinding Ctrl+Shift+N for opening incognito windows

This was lost after 8c2427f3b, which removed the old (non-GAction) code
for handling this shortcut. A side effect of this patch is that we lose
the ability of opening new incognito windows with Ctrl+I, but probably
most people do no even know about that one: Firefox uses Ctrl+Shift+P,
and Chrom{e,ium} use Ctrl+Shift+N. Also, Ctrl+Shift+N is orthogonal with
Ctrl+N, which opens a new window.

Additionally, handle Ctrl+Shift+N as one of the keyboard shortcuts that
the web view should not be able to intercept (like Ctrl+N) so a webpage
will not prevent users from creating new windows.

TL;DR: Nobody is going to miss Ctrl+I, but people are already missing
Ctrl+Shift+I.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=778606